--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/oka311119/chat-gpt-slack-bot#readme",
   "dependencies": {
-    "@slack/web-api": "^6.8.1"
+    "@slack/web-api": "^6.8.1",
+    "dotenv": "^16.0.3"
   }
 }
