--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/oka311119/chat-gpt-slack-bot#readme",
   "dependencies": {
-    "@slack/web-api": "^6.8.1",
+    "@slack/bolt": "^3.12.2",
     "dotenv": "^16.0.3"
+  },
+  "devDependencies": {
+    "serverless-offline": "^12.0.4"
   }
 }
