--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/oka311119/chat-gpt-slack-bot#readme",
   "dependencies": {
     "@slack/bolt": "^3.12.2",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "openai": "^3.2.1"
   },
   "devDependencies": {
     "serverless-offline": "^12.0.4"
